# goxkey

./: .gitignore  AGENTS.md  DEVELOPMENT.md  EXCLUDE_APPS_FEATURE.md  EXCLUDE_APPS_FEATURE_FINAL.md  EXCLUDE_APPS_FEATURE_UPDATED.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
icons/: icon.icns
src/: App.tsx  config.rs  index.css  input.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_handle.rs  apps.rs  config.rs  events.rs  hotkey.rs  input.rs  main.rs  state.rs  ui.rs
src-tauri/src/platform/: linux.rs  macos.rs  macos_ext.rs  mod.rs  windows.rs
src/components/: AccessibilityAlert.tsx  ExcludedAppsSection.tsx  HotkeyConfig.tsx  MacroForm.tsx  MacroList.tsx  MainToggle.tsx  ThemeSelector.tsx  ToggleRow.tsx  TypingMethodSelector.tsx  index.ts
src/components/custom/: AccessibilityAlert.tsx  ExcludedAppsSection.tsx  HotkeyConfig.tsx  LanguageSelector.tsx  LoadingScreen.tsx  MacroForm.tsx  MacroList.tsx  MainToggle.tsx  ThemeSelector.tsx  ToggleRow.tsx  TypingMethodSelector.tsx
src/lib/: index.ts  ipc.ts
src/lib/i18n/: context.tsx  index.ts  translations.ts
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
