[package]
name = "goxkey"
description = "Bộ gõ tiếng Việt mã nguồn mở đa hệ điều hành Gõ Key"
version = "0.2.9"
edition = "2021"

[dependencies]
auto-launch = "0.5.0"
bitflags = "1.3.2"
env_logger = "0.10.0"
libc = "0.2.139"
log = "0.4.17"
nom = "7.1.3"
once_cell = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [
    "app-all",
    "dialog-all",
    "global-shortcut-all",
    "http-all",
    "notification-all",
    "os-all",
    "process-all",
    "protocol-all",
    "shell-open",
    "system-tray",
    "updater",
    "window-all"
] }
vi = "0.6.2"

[target.'cfg(target_os="macos")'.dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
cocoa = "0.24"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
foreign-types = "0.3.2"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
rdev = "0.5.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
