[package]
name = "goxkey"
version = "0.3.0"
edition = "2021"
description = "Bộ gõ tiếng Việt mã nguồn mở đa hệ điều hành Gõ Key"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
auto-launch = "0.5.0"
bitflags = "1.3.2"
env_logger = "0.10.0"
libc = "0.2.139"
log = "0.4.17"
nom = "7.1.3"
once_cell = "1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = ["tray-icon"] }
vi = "0.6.2"

[target.'cfg(target_os="macos")'.dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
cocoa = "0.24"
core-foundation = "0.9.3"
core-graphics = "0.22.3"
foreign-types = "0.3.2"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
rdev = "0.5.2"

[package.metadata.bundle]
copyright = "Copyright (c) Huy Tran 2023. All rights reserved."
icon = ["../icons/icon.icns", "../icons/icon.png"]
identifier = "com.goxkey.app"
name = "GoKey"
version = "0.3.0"
